--- a/linkDev-assessment/package.json
+++ b/linkDev-assessment/package.json
@@ -23,9 +23,12 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.8",
+    "@types/moment": "^2.13.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "date-fns": "^3.6.0",
     "express": "^4.18.2",
+    "moment": "^2.30.1",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
